--- a/api/.env
+++ b/api/.env
@@ -1,5 +1,6 @@
-
+# mongo db connection & db
 MONGODB_URI="mongodb://localhost:27017/"
-MONGODB_COLLECTION="todo"
-SERVER_PORT=5000
+MONGODB_DB_NAME="todo"
 
+#server run port
+SERVER_PORT=5000
